Добавил мета-тег noindex для страниц

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <!-- Подключаем CSS стили -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="canonical" href="https://tetro-game.ru/">
+    <meta name="robots" content="noindex">
     <title>Tetro Game</title>
 </head>
 <body>
